Added headers and titles to all pages

--- a/Pages/about-publications.html
+++ b/Pages/about-publications.html
@@ -11,10 +11,10 @@
 <body>
     <div class="top-content">
         <header class="header">
-            <h1 class="logo" id="comp-logo"><a href="#">SHARRC</a></h1>
+            <h1 class="logo" id="comp-logo"><a href="../index.html">SHARRC</a></h1>
             <div class="mobile-menu">
                 <div class="mobile-nav">
-                    <h1 class="logo"><a href="#">SHARRC</a></h1>
+                    <h1 class="logo"><a href="../index.html">SHARRC</a></h1>
                     <i id="menu-bars" class="fa-solid fa-bars" onclick="showMenu()"></i>
                 </div>
                 <div id="myLinks">
@@ -24,9 +24,9 @@
                                 <i id="pop-out-indicator-about" class="fa-solid fa-caret-down"></i>
                             </div>
                             <div id="about" class="pop-out-content">
-                                <a href="Pages/about.html">About SHARRC</a>
-                                <a href="Pages/about-team.html">Team</a>
-                                <a href="#">Publications</a>
+                                <a href="about.html">About SHARRC</a>
+                                <a href="about-team.html">Team</a>
+                                <a href="about-publications.html">Publications</a>
                             </div>
                         </div>
                     
@@ -36,13 +36,13 @@
                             <i id="pop-out-indicator-projects" class="fa-solid fa-caret-down"></i>
                         </div>
                         <div id="projects" class="pop-out-content">
-                            <a href="Pages/about.html">Current projects</a>
-                            <a href="Pages/about-team.html">Past projects</a>
+                            <a href="projects-current.html">Current projects</a>
+                            <a href="projects-past.html">Past projects</a>
                         </div>
                     </div>
-                    <a href="Pages/about.html">RESOURCES</a>
-                    <a href="Pages/about.html">FUNDING</a>
-                    <a href="Pages/about.html">CONTACT</a>
+                    <a href="resources.html">RESOURCES</a>
+                    <a href="funding.html">FUNDING</a>
+                    <a href="contact.html">CONTACT</a>
                 </div>
             </div>
             <nav class="nav-items">
@@ -51,7 +51,7 @@
                     <i id="drop-down-indicator" class="fa-solid fa-caret-down"></i>
                     <div class="dropdown-content">
                         <a href="about-team.html">Team</a>
-                        <a href="#">Publications</a>
+                        <a href="about-publications.html">Publications</a>
                     </div>
                 </div>
                 <!-- About section will contain  the people involved in the cluster and the publications-->
@@ -59,21 +59,21 @@
                     <a href="#">PROJECTS</a>
                     <i id="drop-down-indicator" class="fa-solid fa-caret-down"></i>
                     <div class="dropdown-content">
-                        <a href="Pages/about-team.html">Current</a>
-                        <a href="Pages/about-publications.html">Past</a>
+                        <a href="projects-current.html">Current</a>
+                        <a href="projects-past.html">Past</a>
                     </div>
                 </div>
                 <!-- Project will contain the specific projects and some info about each one -->
                 <div class="non-dropdown">
-                    <a href="Pages/about.html">RESOURCES</a>
+                    <a href="resources.html">RESOURCES</a>
                 </div> 
                 <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
                 <div class="non-dropdown">
-                    <a href="Pages/about.html">FUNDING</a>
+                    <a href="funding.html">FUNDING</a>
                 </div>
                 <!-- Small info about each funding partner, what they fund, and what they do. -->
                 <div class="non-dropdown">
-                    <a href="Pages/about.html">CONTACT</a>
+                    <a href="contact.html">CONTACT</a>
                 </div>
                 <!-- Contact info for natalia, nick, etc. -->
             </nav>
