--- a/Pages/resources.html
+++ b/Pages/resources.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page-style.css">
     <script src="https://kit.fontawesome.com/6fb872766b.js" crossorigin="anonymous"></script>
-    <title>Team</title>
+    <title>Resources</title>
 </head>
 <body>
     <div class="top-content">
         <header class="header">
-            <h1 class="logo" id="comp-logo"><a href="#">SHARRC</a></h1>
+            <h1 class="logo" id="comp-logo"><a href="../index.html">SHARRC</a></h1>
             <div class="mobile-menu">
                 <div class="mobile-nav">
-                    <h1 class="logo"><a href="#">SHARRC</a></h1>
+                    <h1 class="logo"><a href="../index.html">SHARRC</a></h1>
                     <i id="menu-bars" class="fa-solid fa-bars" onclick="showMenu()"></i>
                 </div>
                 <div id="myLinks">
@@ -24,9 +24,9 @@
                                 <i id="pop-out-indicator-about" class="fa-solid fa-caret-down"></i>
                             </div>
                             <div id="about" class="pop-out-content">
-                                <a href="Pages/about.html">About SHARRC</a>
-                                <a href="Pages/about-team.html">Team</a>
-                                <a href="Pages/about-publications.html">Publications</a>
+                                <a href="about.html">About SHARRC</a>
+                                <a href="about-team.html">Team</a>
+                                <a href="about-publications.html">Publications</a>
                             </div>
                         </div>
                     
@@ -36,18 +36,18 @@
                             <i id="pop-out-indicator-projects" class="fa-solid fa-caret-down"></i>
                         </div>
                         <div id="projects" class="pop-out-content">
-                            <a href="Pages/about.html">Current projects</a>
-                            <a href="Pages/about-team.html">Past projects</a>
+                            <a href="projects-current.html">Current projects</a>
+                            <a href="projects-past.html">Past projects</a>
                         </div>
                     </div>
-                    <a href="Pages/about.html">RESOURCES</a>
-                    <a href="Pages/about.html">FUNDING</a>
-                    <a href="Pages/about.html">CONTACT</a>
+                    <a href="resources.html">RESOURCES</a>
+                    <a href="funding.html">FUNDING</a>
+                    <a href="contact.html">CONTACT</a>
                 </div>
             </div>
             <nav class="nav-items">
                 <!-- Nav items will be drop down lists NEED TO LEARN THAT -->
-                <div class="dropdown"><a href="#">ABOUT</a>
+                <div class="dropdown"><a href="about.html">ABOUT</a>
                     <i id="drop-down-indicator" class="fa-solid fa-caret-down"></i>
                     <div class="dropdown-content">
                         <a href="about-team.html">Team</a>
@@ -56,24 +56,24 @@
                 </div>
                 <!-- About section will contain  the people involved in the cluster and the publications-->
                 <div class="dropdown">
-                    <a href="Pages/about.html">PROJECTS</a>
+                    <a href="#">PROJECTS</a>
                     <i id="drop-down-indicator" class="fa-solid fa-caret-down"></i>
                     <div class="dropdown-content">
-                        <a href="Pages/about-team.html">Team</a>
-                        <a href="Pages/about-publications.html">Publications</a>
+                        <a href="projects-current.html">Current</a>
+                        <a href="projects-past.html">Past</a>
                     </div>
                 </div>
                 <!-- Project will contain the specific projects and some info about each one -->
                 <div class="non-dropdown">
-                    <a href="Pages/about.html">RESOURCES</a>
+                    <a href="resources.html">RESOURCES</a>
                 </div> 
                 <!-- Resources will contain the facilities that are available and any open access/publically available data and useable resources -->
                 <div class="non-dropdown">
-                    <a href="Pages/about.html">FUNDING</a>
+                    <a href="funding.html">FUNDING</a>
                 </div>
                 <!-- Small info about each funding partner, what they fund, and what they do. -->
                 <div class="non-dropdown">
-                    <a href="Pages/about.html">CONTACT</a>
+                    <a href="contact.html">CONTACT</a>
                 </div>
                 <!-- Contact info for natalia, nick, etc. -->
             </nav>
@@ -81,7 +81,7 @@
 
         <div class="hero">
             <div class="hero-content-wrapper">
-                <h1 class="hero-header">Team</h1>
+                <h1 class="hero-header">Resources</h1>
             </div>
         </div>
     </div>
