Added project sub menu items

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     <a href="Pages/about.html">PROJECTS</a>
                     <i id="drop-down-indicator" class="fa-solid fa-caret-down"></i>
                     <div class="dropdown-content">
-                        <a href="Pages/about-team.html">Team</a>
-                        <a href="Pages/about-publications.html">Publications</a>
+                        <a href="Pages/about-team.html">Current</a>
+                        <a href="Pages/about-publications.html">Past</a>
                     </div>
                 </div>
                 <!-- Project will contain the specific projects and some info about each one -->
