Added layout and concept for displaying the team

--- a/Pages/about-team.html
+++ b/Pages/about-team.html
@@ -86,6 +86,74 @@
         </div>
     </div>
 
+
+
+    <!-- For the "meet the team section:" -->
+    <!-- display as a grid with large photo of each peron -->
+    <!-- Photo will need dark backgroud blend to contrast the name overtop -->
+    <!-- Name will scale 1.1 when hovered -->
+    <!-- When person is clicked, div will be added below showing info -->
+    <!-- Info will include: affiliations, specialties, link to uni profile, field of expertise -->
+    <!-- Div will appear slowly to push down the content below it -->
+    <!-- If the person is clicked again, the div will disapear -->
+    <!-- If another person on the same line is clicked, the text changes to that of the newly clicked person -->
+    <section class="team-grid">
+        <div class="person">
+            <div class="photo">
+                This will be the photo of each person
+            </div>
+            <p class="description">
+                This will be the description of each person
+            </p>
+        </div>
+        <div class="person">
+            <div class="photo">
+                This will be the photo of each person
+            </div>
+            <p class="description">
+                This will be the description of each person
+            </p>
+        </div>
+        <div class="person">
+            <div class="photo">
+                This will be the photo of each person
+            </div>
+            <p class="description">
+                This will be the description of each person
+            </p>
+        </div>
+        <div class="person">
+            <div class="photo">
+                This will be the photo of each person
+            </div>
+            <p class="description">
+                This will be the description of each person
+            </p>
+        </div>
+        <div class="person">
+            <div class="photo">
+                This will be the photo of each person
+            </div>
+            <p class="description">
+                This will be the description of each person
+            </p>
+        </div>
+        <div class="person">
+            <div class="photo">
+                This will be the photo of each person
+            </div>
+            <p class="description">
+                This will be the description of each person
+            </p>
+        </div>
+    </section>
+
+
+
+
+
+
+
     <footer class="footer">
         <div class="footer-content">
             <div class="socials">
