Added and formated 'about team' for small screens

--- a/Pages/about-team.html
+++ b/Pages/about-team.html
@@ -99,51 +99,69 @@
     <!-- If another person on the same line is clicked, the text changes to that of the newly clicked person -->
     <section class="team-grid">
         <div class="person">
-            <div class="photo">
-                This will be the photo of each person
+            <div class="image-name">
+                <img class="photo" src="../Images/Climbing.jpg">
+                <h1>Dr. Natalia Kabaliuk</h1>
             </div>
             <p class="description">
-                This will be the description of each person
+                This will be the description of each person, their uni profile link, 
+                their affiliations, their field of expertise/skills, and maybe something 
+                about previous projects.
             </p>
         </div>
         <div class="person">
-            <div class="photo">
-                This will be the photo of each person
+            <div class="image-name">
+                <img class="photo" src="../Images/Climbing.jpg">
+                <h1>Prof. Nick Draper</h1>
             </div>
             <p class="description">
-                This will be the description of each person
+                This will be the description of each person, their uni profile link, 
+                their affiliations, their field of expertise/skills, and maybe something 
+                about previous projects.
             </p>
         </div>
         <div class="person">
-            <div class="photo">
-                This will be the photo of each person
+            <div class="image-name">
+                <img class="photo" src="../Images/Climbing.jpg">
+                <h1>Someone's name</h1>
             </div>
             <p class="description">
-                This will be the description of each person
+                This will be the description of each person, their uni profile link, 
+                their affiliations, their field of expertise/skills, and maybe something 
+                about previous projects.
             </p>
         </div>
         <div class="person">
-            <div class="photo">
-                This will be the photo of each person
+            <div class="image-name">
+                <img class="photo" src="../Images/Climbing.jpg">
+                <h1>Someone's name</h1>
             </div>
             <p class="description">
-                This will be the description of each person
+                This will be the description of each person, their uni profile link, 
+                their affiliations, their field of expertise/skills, and maybe something 
+                about previous projects.
             </p>
         </div>
         <div class="person">
-            <div class="photo">
-                This will be the photo of each person
+            <div class="image-name">
+                <img class="photo" src="../Images/Climbing.jpg">
+                <h1>Someone's name</h1>
             </div>
             <p class="description">
-                This will be the description of each person
+                This will be the description of each person, their uni profile link, 
+                their affiliations, their field of expertise/skills, and maybe something 
+                about previous projects.
             </p>
         </div>
         <div class="person">
-            <div class="photo">
-                This will be the photo of each person
+            <div class="image-name">
+                <img class="photo" src="../Images/Climbing.jpg">
+                <h1>Someone's name</h1>
             </div>
             <p class="description">
-                This will be the description of each person
+                This will be the description of each person, their uni profile link, 
+                their affiliations, their field of expertise/skills, and maybe something 
+                about previous projects.
             </p>
         </div>
     </section>
