--- a/Pages/about-publications.html
+++ b/Pages/about-publications.html
@@ -86,6 +86,39 @@
         </div>
     </div>
 
+    <section class="publications">
+        <h2>2022</h2>
+        <div class="reference">
+            <a href="https://link.springer.com/article/10.1007/s10439-022-03045-5">
+                <strong>Test Kinematics Using Varied Impact Surfaces and Head/Neck 
+                Configurations for Rugby Headgear Testing.</strong> Stitt, D., Kabaliuk, N., 
+                Alexander, K., Draper, N. <em>Ann Biomed Eng</em> 50, 1633–1647.
+            </a>
+        </div>
+        <div class="reference">
+            <a href="https://link.springer.com/article/10.1007/s10439-022-02912-5">
+                <strong>Potential of Soft-Shell Rugby Headgear to Mitigate Linear and Rotational 
+                Peak Accelerations.</strong> Stitt, D., Kabaliuk, N., Alexander, K., Draper, N. 
+                <em>Ann Biomed Eng</em> 50, 1546–1564.
+            </a>
+        </div>
+        <h2>2021</h2>
+        <div class="reference">
+            <a href="https://www.mdpi.com/1424-8220/21/18/6028">
+                <strong>Laboratory Validation of Instrumented Mouthguard for Use in 
+                Sport.</strong> Stitt, D., Draper, N., Alexander, K., Kabaliuk, N.   
+                <em>Sensors</em> 21(18), 6028.
+            </a>
+        </div>
+        <div class="reference">
+            <a href="https://www.hindawi.com/journals/jhe/2021/5567625/">
+                <strong>Potential of Soft-Shelled Rugby Headgear to Reduce Linear Impact 
+                Accelerations.</strong> Draper, N., Kabaliuk, N., Stitt, D., Alexander, K. 
+                <em>Journal of Healthcare Engineering</em>.
+            </a>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="footer-content">
             <div class="socials">
